# TraderOptimizer

./: .gitignore  README.md  pyproject.toml
notebooks/: TraderOptimizer_Batch_Results.ipynb
reports/: buy_hold_concurrent_plan.md  non_cso_optimization_plan.md  non_cso_weekly_30k_20260529_after_brkb_backfill_plan.md  non_cso_weekly_30k_crypto_20260529_matrend002_fix_plan.md  non_cso_weekly_30k_crypto_20260529_plan.md  regime_detection_paper_lookup_20260531.md  regime_detection_paper_lookup_20260531_candidates.jsonl  regime_detection_paper_scout_20260531.md  regime_tuning_smoke_concurrent_20260601_plan.md  regime_tuning_smoke_concurrent_precreated_20260601_plan.md  strategy_optimization_walkthrough_todo_20260613.md
scripts/: build_instrument_slope_severity_config.py  build_instrument_volatility_regime_config.py  build_regime_tuning_universe.py  build_regime_vectors.py  categorize_historical_bar_regions.py  detect_live_regimes.py  generate_regime_strategy_candidates.py  run_regime_tuning_universe.py
tests/: test_backtester.py  test_batch.py  test_benchmarks.py  test_config.py  test_live_regime.py  test_market_feature_sources.py  test_market_features.py  test_postgres.py  test_regime_detector_specs.py  test_regime_tuning_runner.py  test_regime_tuning_universe.py  test_regime_vectors.py  test_simulator.py  test_strategy_candidate_generator.py  test_strategy_configs.py  test_strategy_regime_map.py  test_sweeps.py  test_tuning_profile.py  test_tuning_regions.py
trader_optimizer/: __init__.py  __main__.py  backtester.py  batch.py  benchmark_loop.py  cli.py  config.py  (+22 more)
(+41 files in other folders)
